frontend/tests/cases/negative/contravariance.gr
cofmap : forall {a : Type, b : Type, c : Type} .
         (a -> b) -> (b -> c) -> (a -> c)
cofmap f g = f . g